--- a/src/Rottenwood/VacancyBundle/Resources/config/services.yml
+++ b/src/Rottenwood/VacancyBundle/Resources/config/services.yml
@@ -1,8 +1,7 @@
-#parameters:
-#    vacancy.api.controller.class: Rottenwood\VacancyBundle\Controller\ApiController
-#
-#services:
-#    # API controller was made as a service to inject entity manager
-#    vacancy.api.controller:
-#        class: %vacancy.api.controller.class%
-#        arguments: []
+parameters:
+    vacancy.service.class: Rottenwood\VacancyBundle\Service\VacancyService
+
+services:
+    vacancy.service:
+        class: %vacancy.service.class%
+        arguments: [@doctrine.orm.entity_manager]
